Bug 262580 - [LFC][Floats] FloatingContext does not need to know about the initiating FormattingContext
Summary: [LFC][Floats] FloatingContext does not need to know about the initiating Form...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-10-03 15:49 PDT by zalan
Modified: 2023-10-05 04:59 PDT (History)
5 users (show)

See Also:


Attachments
Patch (18.75 KB, patch)
2023-10-03 16:06 PDT, zalan
no flags Details | Formatted Diff | Diff
[fast-cq]Patch (18.75 KB, patch)
2023-10-04 20:07 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-10-03 15:49:38 PDT
ssia
Comment 1 zalan 2023-10-03 16:06:19 PDT
Created attachment 468052 [details]
Patch
Comment 2 zalan 2023-10-04 20:07:19 PDT
Created attachment 468070 [details]
[fast-cq]Patch
Comment 3 EWS 2023-10-05 04:58:54 PDT
Committed 268910@main (fa21df0a4979): <https://commits.webkit.org/268910@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 468070 [details].
Comment 4 Radar WebKit Bug Importer 2023-10-05 04:59:14 PDT
<rdar://problem/116517900>