Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp
@@ -62,6 +62,7 @@ WTF_MAKE_ISO_ALLOCATED_IMPL(InlineFormattingContext);
 
 InlineFormattingContext::InlineFormattingContext(const ElementBox& formattingContextRoot, LayoutState& layoutState, BlockLayoutState& parentBlockLayoutState)
     : FormattingContext(formattingContextRoot, layoutState)
+    , m_floatingContext(formattingContextRoot, layoutState, parentBlockLayoutState.placedFloats())
     , m_inlineContentCache(layoutState.inlineContentCache(formattingContextRoot))
     , m_inlineFormattingUtils(*this)
     , m_inlineQuirks(*this)
@@ -176,7 +177,7 @@ InlineLayoutResult InlineFormattingContext::lineLayout(AbstractLineBuilder& line
         return layoutResult;
     }
 
-    auto floatingContext = FloatingContext { *this, inlineLayoutState().placedFloats() };
+    auto floatingContext = this->floatingContext();
     auto lineLogicalTop = InlineLayoutUnit { constraints.logicalTop() };
     auto previousLineEnd = std::optional<InlineItemPosition> { };
     auto leadingInlineItemPosition = needsLayoutRange.start;
@@ -217,8 +218,8 @@ void InlineFormattingContext::layoutFloatContentOnly(const ConstraintsForInlineC
     ASSERT(!root().hasInFlowChild());
 
     auto& inlineContentCache = this->inlineContentCache();
+    auto floatingContext = this->floatingContext();
     auto& placedFloats = inlineLayoutState().placedFloats();
-    auto floatingContext = FloatingContext { *this, placedFloats };
 
     InlineItemsBuilder { inlineContentCache, root() }.build({ });
 
